feat( user ): added add user, paginated get all user functionality